# bazel-swc-lab

./: .bazelrc  .gitignore  README.md  WORKSPACE  defs.bzl
pkg/front/app/: .swcrc  BUILD.bazel  index.html  main.tsx  package.json  tsconfig.json  webpack.config.js
pkg/front/app/src/: app.tsx  paragraph.tsx
